Course info message

--- a/apps/courseplanner/templates/courses_list.html
+++ b/apps/courseplanner/templates/courses_list.html
@@ -4,6 +4,11 @@
 
 
 <div class="section is-half"" id="vue-target" v-cloak>
+<article class="message is-info">
+    <div class="message-body">
+        Only public courses and courses you create will be shown here. 
+    </div>
+</article>
 
 <table id="table" class="table is-striped is-fullwidth">
     <thead>
