added page titles

--- a/apps/courseplanner/templates/course_history.html
+++ b/apps/courseplanner/templates/course_history.html
@@ -1,5 +1,7 @@
 [[extend "layout.html"]]
 
+<title>Enrollment History</title>
+
 <section class="section is-half" id="vue-target" v-cloak>
     <article class="message is-info">
         <div class="message-body">
@@ -9,8 +11,7 @@
     </article>
     <article class="message is-warning">
         <div class="message-body">
-            Note that deleting a course on this page will only remove your enrollment. To delete the course itself go to
-            the course search page.
+            Note that deleting a course on this page will only remove your enrollment. To delete the course itself go to the course search page.
         </div>
     </article>
 
